Reworked JavaScript still not functioning with outputs. It will have a functioning output list.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 body {
   background-color: #06789E;
-  color: white;
+  color: black;
   font-size: 25px;
   font-family: monospace;
+}
+.jumbotron {
+  background-color: black;
 }
